# multi-agent-flood-prediction-communication

./: .gitattributes  .gitignore  README.md  RISK_OVERVIEW_AGENT_README.md  start.sh
AI Agent/: Flood Guides.py  eval_questions.txt
backend/: env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: action_plan_agent.py  common.py  evaluator_agent.py  govdoc_agent.py  revision_agent.py
backend/app/api/: predict.py
backend/app/models/: action_plan_models.py  predictor_models.py
backend/app/services/: google_flood_service.py  gov_flood_alert_agent.py  hydrological_forecast_agent.py  integration_example.py  msn_flood_alerts_agent.py  precipitation_forecast_agent.py  predictor_service.py  rag_service.py  risk_overview_agent.py  social_media_service.py  token_tracker.py  usage_example.py  weather_service.py
backend/app/tools/: downloader.py  models.py  storage.py  text_extractor.py
backend/data/: BasinATLAS_v10_lev07.dbf  BasinATLAS_v10_lev07.sbn  BasinATLAS_v10_lev07.sbx  BasinATLAS_v10_lev07.shp  BasinATLAS_v10_lev07.shx  global_hybas_locations.csv  global_return_periods.csv
backend/docs/: .gitkeep
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ActionPlan.js  Chatbot.js  DischargePrediction.js  Header.js  InformationTabs.js  Live.js  LocationInput.js  MockActionPlan.json  OfficialGuide.js  RiskOverview.js  SeverityAssessment.js  SocialMedia.js
single-agent-backend/: pyproject.toml
single-agent-backend/action-plan-docs/: manifest.jsonl
(+5 files in other folders)
